Fixed event modal on mobile devices.

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -107,6 +107,9 @@ hr
 
 #modal-dj, #modal-event
   backdrop-filter: blur(5px)
+  .modal-close
+    right: 1rem
+    top: 1rem
   .modal-content-wrapper
     clip-path: polygon($modal-clip-size 0%, calc(100% - $modal-clip-size) 0%, 100% 0, 100% calc(100% - $modal-clip-size), calc(100% - $modal-clip-size) 100%, $modal-clip-size 100%, 0 100%, 0% $modal-clip-size)
     background: white
@@ -121,12 +124,18 @@ hr
   .btn-close
     filter: invert(1)
     align-self: flex-start
+
 #modal-dj-avatar
   max-height: 30vh
   width: auto
+@include media-breakpoint-up(sm)
+  #modal-dj-avatar
+    width: 100%
+    height: auto
+    max-height: none
+
 #modal-event
   .poster-wrapper
-    height: 50vh
     .poster
       width: 100%
       height: 100%
@@ -143,6 +152,10 @@ hr
       pointer-events: all !important
       cursor: pointer !important
       color: #6c757d !important
+@include media-breakpoint-up(sm)
+#modal-event
+  .poster-wrapper
+    height: 40vh
 
 .fullpage
   height: calc(var(--vh, 1vh) * 100)
